samples/_failures_safe/1761540074_399de3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1a4527a.c: In function ‘main’:
./samples/SAFE/__tmp_e1a4527a.c:141:5: error: expected expression at end of input
  141 |     if (len >
      |     ^~
./samples/SAFE/__tmp_e1a4527a.c:141:5: error: expected declaration or statement at end of input
